# mnemo-mcp

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitguardian.yaml  .gitignore  .infisical.json  .mise.toml  .pre-commit-config.yaml  .release-please-manifest-beta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  apply_fix.py  apply_fix_v2.py  apply_pr_feedback.py  benchmark_import.py  benchmark_import_merge.py  benchmark_memorydb_import.py  benchmark_stats.py  benchmark_stats_combined.py  code_changes.diff  config_refactor.diff  coverage.xml  coverage_output.txt  diff_for_review.txt  docker-compose.http.yml  docker-compose.yml  dummy.txt  fix.diff  fix_again.diff  fix_delta_sync.py  fix_delta_sync_v2.py  fix_store_v2.py  fix_ty.py  fix_windows_ci.py  (+26 more)
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/rulesets/: development.json  main.json  production.json
.github/workflows/: cd.yml  ci.yml  opencode.yml
.jules/: bolt.md  palette.md  sentinel.md
alembic/versions/: mem_002_compression.py
cov_annotate/: z_116e4380005a33a6_graph.py,cover
docs/: ARCHITECTURE.md  BENCHMARKS.md  compression.md  passport.md  setup-manual.md  setup-with-agent.md
docs/superpowers/specs/: 2026-03-17-mnemo-mcp-v1.8-v1.9-design.md
hooks/: hooks.json  post-tool-use.sh  session-start.sh
migrations/: 0001_init_mnemo.sql
scripts/: cf_deploy.mjs  cf_full_flow.py  cf_full_flow_mnemo.py  deploy_cf.py  gen_cf_corpus.py
skills/knowledge-audit/: SKILL.md
skills/knowledge-capture/: SKILL.md
skills/memory-commit/: SKILL.md
skills/passport-bootstrap/: SKILL.md
skills/recall-context/: SKILL.md
skills/session-handoff/: SKILL.md
src/: worker.ts
src/mnemo_mcp/: __init__.py  __init__.py,cover  __main__.py  __main__.py,cover  _d1_conn.py  alembic.ini  capture.py  cli.py  compression.py  config.py  config.py,cover  config.py.orig  credential_state.py  db.py  db.py,cover  db.py.orig  db.py.rej  db_cf.py  embedder.py  embedder.py,cover  embedder.py.rej  exceptions.py  graph.py  graph.py,cover  llm.py  relay_schema.py  relay_schema.py,cover  relay_setup.py  relay_setup.py,cover  reranker.py  reranker.py,cover  server.py  server.py,cover  server.py.rej  setup_tool.py  setup_tool.py,cover  sql.py  sync.py  sync.py,cover  sync.py.orig  (+2 more)
src/mnemo_mcp/alembic/: env.py
src/mnemo_mcp/alembic/versions/: baseline_001_existing_schema.py  mem_001_context_types.py  mem_002_compression.py  mem_003_temporal.py  mem_004_store_meta.py
src/mnemo_mcp/docs/: __init__.py  config.md  memory.md  setup.md
src/mnemo_mcp/sync/: __init__.py  bundle.py  delta.py  gdrive.py  s3.py
src/mnemo_mcp/temporal/: queries.py  resolve.py  store.py
tests/: cloudflare-workers-stub.ts  conftest.py  conftest_cf.py  conftest_e2e.py  test_add_memory_tool_coverage.py  test_archive.py  test_capture.py  test_cf_skip_gdrive.py  test_cli.py  test_compression.py  test_compression_coverage.py  test_compression_env.py  test_config.py  test_config_coverage.py  test_config_dims.py  test_config_gguf.py  test_config_helpers.py  test_config_open_relay_registered.py  test_credential_state.py  test_credential_state_cf.py  test_credential_state_coverage.py  test_credential_state_multi_user.py  test_credential_state_stdio_no_fallback.py  test_credential_state_sub_coverage.py  test_d1_conn_shim.py  test_db.py  test_db.py.rej  test_db_add_with_context_type_coverage.py  test_db_archive_coverage.py  test_db_cf.py  test_db_cf_coverage.py  test_db_cf_graph.py  test_db_cf_search_parity.py  test_db_cf_store_meta.py  test_db_coverage.py  test_db_rrf.py  test_db_security.py  test_db_serialize.py  test_db_sync_state.py  test_db_tag_filtering.py  (+84 more)
tests/fixtures/: cf_corpus.jsonl  cf_golden_topk.json
tests/integration/: test_multi_user_remote.py
tests/sync/: test_bundle.py  test_delta.py  test_gdrive.py  test_kg_sync.py  test_s3.py  test_s3_backend.py  test_scheduler.py  test_sync_backend_resolve.py
tests/temporal/: test_auto_capture.py  test_queries.py  test_queries_coverage.py  test_resolve_edge_cases.py  test_resolve_exception.py  test_resolve_full_coverage.py  test_security_queries.py  test_server_kg_handlers.py  test_store.py
