[project]
name = "mnemo-mcp"
version = "2.3.0-beta.20"
description = "Open-source MCP Server for persistent AI memory with embedded sync"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "n24q02m", email = "quangminh2422004@gmail.com" }]
keywords = ["mcp", "mcp-server", "model-context-protocol", "memory", "ai-memory", "sqlite", "embeddings", "claude", "cursor", "copilot", "antigravity", "codex", "opencode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = "==3.13.*"
dependencies = [
    # MCP Server
    "mcp[cli]",
    # HTTP Client (for embedding API calls)
    "httpx",
    # Config
    "pydantic",
    "pydantic-settings",
    # Logging
    "loguru",
    # SQLite vector search
    "sqlite-vec",
    # Local ONNX embedding (auto-fallback when no cloud API)
    "qwen3-embed>=1.12.0b3",
    # Zero-env-config credential relay + LLM/embed/rerank via litellm passthrough
    "n24q02m-mcp-core[llm]>=1.18.0b19,<2",
    # Pin Pygments to fix ReDoS (CVE in <2.20.0)
    "Pygments>=2.20.0",
    "alembic>=1.18.4",
    # Phase 2: token counting for LLM compression pipeline
    "tiktoken>=0.13.0",
    # Phase 2: S3 / R2 / B2 / MinIO passport-sync backend
    "boto3>=1.43.34",
    # Phase 2: AES-256-GCM bundle encryption + Argon2id KDF
    "cryptography>=49.0.0",
    # Transitive pin: urllib3 < 2.7.0 has 2 HIGH CVEs (GHSA-qccp-gfcp-xxvc
    # sensitive-header cross-origin forwarding + GHSA-mf9v-mfxr-j63j
    # decompression-bomb bypass). Both patched in 2.7.0.
    "urllib3>=2.7.0",
    # Transitive pin: idna < 3.15 -> CVE-2026-45409; python-multipart
    # < 0.0.27 -> CVE-2026-42561. Pinned to patched releases.
    "idna>=3.18",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "ruff",
    "ty",
    "pre-commit",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "syrupy>=5.3.2",
    # Phase 2: in-memory S3 fixture for sync backend tests
    "moto[s3]>=5.2.2",
    "bandit>=1.9.4",
]

[project.scripts]
mnemo-mcp = "mnemo_mcp.server:main"

[project.urls]
Homepage = "https://github.com/n24q02m/mnemo-mcp"
Repository = "https://github.com/n24q02m/mnemo-mcp.git"
Issues = "https://github.com/n24q02m/mnemo-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/mnemo_mcp/**/*.py",
    "src/mnemo_mcp/**/*.md",
    "src/mnemo_mcp/**/*.ini",
    "src/mnemo_mcp/**/*.mako",
    "src/mnemo_mcp/alembic/README",
    "src/mnemo_mcp/py.typed",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 30
markers = [
    "integration: integration tests (require network/services)",
    "live: live MCP protocol tests (spawn real server via stdio)",
    "full: full live tests with real services",
    "e2e: end-to-end MCP protocol tests (3 setup modes)",
    "slow: slow tests (skippable with -m 'not slow')",
]
addopts = "-m 'not integration and not live and not full and not e2e'"

[tool.ty]
rules = { unresolved-import = "ignore", unresolved-attribute = "ignore", possibly-missing-attribute = "ignore" }

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [".claude-plugin/plugin.json:version", "server.json:version"]
tag_format = "v{version}"
commit_message = "chore(release): v{version}"
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src/mnemo_mcp"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
